WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302164
[WPE][GTK] Crash when loading webkit://gpu in case there is no GPU thread
https://bugs.webkit.org/show_bug.cgi?id=302164
Summary
[WPE][GTK] Crash when loading webkit://gpu in case there is no GPU thread
Alejandro G. Castro
Reported
2025-11-07 10:53:13 PST
We are requesting the mssa sample count when there is no skiaGLContext, we have to control that situation.
Attachments
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2025-11-07 10:58:19 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53597
EWS
Comment 2
2025-11-10 01:21:24 PST
Committed
302788@main
(cd4d8134c265): <
https://commits.webkit.org/302788@main
> Reviewed commits have been landed. Closing PR #53597 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-11-10 01:22:11 PST
<
rdar://problem/164388958
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug