[WPE][GTK] Crash when loading webkit://gpu in case there is no GPU thread https://bugs.webkit.org/show_bug.cgi?id=302164

Reviewed by Carlos Garcia Campos.

When launching the web engine without GPU threads for rendering
(WEBKIT_SKIA_GPU_PAINTING_THREADS=0) and opening the webkit://gpu the
request for the MSAA sample count fails because there is no
skiGPUContext. We need to protect for that situation to avoid the crash
and report 0.

* Source/WebCore/platform/graphics/skia/PlatformDisplaySkia.cpp:
(WebCore::PlatformDisplay::msaaSampleCount const):

Canonical link: https://commits.webkit.org/302788@main